# beatles

./: README.md  pyproject.toml
src/: manage.py
src/core/: __init__.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
src/core/migrations/: 0001_initial.py
src/songs/: models.py  urls.py  views.py
src/songs/management/commands/: import_songs.py
src/songs/migrations/: 0001_initial.py  0002_alter_song_name_alter_song_nme_rank_and_more.py  0003_alter_song_nme_rank_alter_song_rolling_stone_rank_and_more.py  0004_alter_song_song_time.py  0005_alter_song_singer.py  0006_alter_song_ug_favourites_alter_song_ug_views.py  0007_alter_song_ug_favourites_alter_song_ug_views.py
